chore: added mascotte

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>gohole - DNS Ad Blocker Dashboard</title>
+    <title>Gohole</title>
     <meta name="description" content="Professional DNS ad blocking solution with real-time monitoring and analytics" />
     <meta name="author" content="gohole" />
     <meta name="keywords" content="DNS, ad blocker, network security, privacy, monitoring" />
